<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered By Kuldeep Prajapati</string>


    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display sepecifi or all related shops to match your search</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and if you  registered with us, You can perform bookings as well our</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">We will handle everthing for you. As you have the app in your pocket then you don\'t have to worry</string>


   <!-- Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>


   <!-- Strings for Dashboard-->
    <string name="hotels">Hotels</string>
    <string name="resturents">Restaurants</string>
    <string name="shops">shops</string>
    <string name="banks">Banks</string>
    <string name="airpots">airports</string>


    <!-- Title and Description-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_location_description">All the locations that are featured and have the top demand in town</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Catergories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search....</string>







</resources>